--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/icon": "^1.15.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@vercel/speed-insights": "^1.2.0",
     "nuxt": "^4.0.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
