--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.15.0",
+    "@nuxt/image": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
